deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-api-quarkus-service
  namespace: todos
spec:
  type: ClusterIP
  selector:
    app: todos-api-quarkus
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
